--- a/precautious.html
+++ b/precautious.html
@@ -1,57 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Covid-19</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Precautions</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comforter&family=PT+Sans+Narrow&family=Roboto:wght@100&family=Ubuntu:wght@300&display=swap" rel="stylesheet"> 
 </head>
+
 <body>
 
-    <!---- header section ---->
-    
+      <!---- header section ---->
+
  <div class="header" id="header-section">
   <nav>
    <h2 class="main-title">COVID-19</h2>
    <ul>
-    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="#">2</a></li>
     <li><a href="#">3</a></li>
     <li><a href="symtoms.html">Symtoms</a></li>
-    <li><a href="precautions.html">Precautions</a></li>
+    <li><a class="active" href="precautions.html">Precautions</a></li>
     <li><a href="contact.html">Contact</a></li>
    </ul>
   </nav>
 
-  
+   <br>
+   <hr>
+   <br>
 
-  <br>
-  <hr>
-  <br>
-  
-  <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map" width="100%" height="680px" class="iframe-class"></iframe>
-  
-  <hr>
-  
-    <!---- footer section ---->
+      <!---- section ---->
 
-    <footer>
-        <p> WOULD YOU LIKE TO KNOW AND LEARN MORE?  <br> BY CLICKING ON THE LINK BELOW.</p>
-  
-        <div class="social">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+   <section class="precautions" id="precautions">
+    <h1>Take Precautions <span>Against Covid-19</span></h1>
+
+    <div class="column">
+
+        <div class="box-container">
+            <h3 class="title">Things you <b>SHOULD DO</b></h3>
+            <div class="box">
+                <img src="images/wash-your-hand.png" alt="">
+                <div class="infomation">
+                    <h3>Wash Your Hand</h3>
+                    <p>Hands should be washed with soap to eradicate germs.
+                       Because people routinely touch their eyes, nose, and mouth without realizing it, this helps to avoid infections.
+                       Handwashing, by removing germs, helps to prevent diarrhea and respiratory illnesses, as well as skin and eye problems. </p>
+                </div>
+            </div>
+
+
+            <div class="box">
+                <img src="images/wear-a-mask.png" alt="">
+                <div class="infomation">
+                    <h3>Always Wear a Mask</h3>
+                    <p>When talking, breathing, or coughing, face coverings reduce the volume and travel distance of exhaled droplets. 
+                       A face mask with no vents or holes will filter out virus-carrying particles from inhaled and exhaled air, 
+                       lowering the risk of infection. </p>
+                </div>
+            </div>
+
+
+            <div class="box">
+                <img src="images/stay-home.png" alt="">
+                <div class="infomation">
+                    <h3>Stay Home During Fever</h3>
+                    <p>According to a recent research, a sick employee may transfer their germs to up to 60% of routinely touched surfaces in the workplace in just four hours, 
+                       significantly raising the risk of disease spreading to coworkers.
+                       Your disease might be transferred by close talking, sneezing, or coughing, even if you didn't touch anything at work, which is very impossible. </p>
+                </div>
+            </div>
         </div>
-        <p class="end"> © COPYRIGHT BY TEAM PeaxCX</p>
-    </footer>
+
+
+
+        <div class="box-container">
+
+            <h3 class="title">Things you <b>SHOULD NOT DO</b></h3>
+
+            <div class="box">
+                <img src="images/avoid-animal.png" alt="">
+                <div class="infomation">
+                    <h3>Avoid Close Contact With Animals</h3>
+                    <p>During close contact, the virus can spread from people to animals.
+                       More study is needed to find whether and how COVID-19 affects different animals.
+                       People who have COVID-19, whether suspected or proven, should stay away from animals, including pets, livestock, and wildlife.</p>
+                </div>
+            </div>
+
+
+            <div class="box">
+                <img src="images/dont-img2.png" alt="">
+                <div class="infomation">
+                    <h3>Avoid Close Contact With People</h3>
+                    <p>The coronavirus is mostly transmitted from one person to another.
+                       A person who has been infected with the coronavirus, even though they have no symptoms.</p>
+                </div>
+            </div>
+
+
+            <div class="box">
+                <img src="images/avoid-crowded-people.jpg" alt="">
+                <div class="infomation">
+                    <h3>Avoid Crowded Area</h3>
+                    <p>COVID-19 spreading is limited by physical distancing, 
+                       which involves keeping a space of at least 1 meter between each other and avoiding spending time in crowded locations or in groups.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <script src="script.js"></script>
 </body>
