--- a/html/about.html
+++ b/html/about.html
@@ -46,7 +46,7 @@
         <div class="max-width">
             <div class="about-content">
                 <div class="column left">
-                    <img src="../images/about.png" alt="">
+                    <img src="../images/about(1).png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">What is <span>COVID-19?</span></div>
