There is a small mistake with the image path, and have corrected it.

--- a/html/precautious.html
+++ b/html/precautious.html
@@ -50,7 +50,7 @@
             <div class="box-container">
                 <h3 class="title">Things you <b>SHOULD DO</b></h3>
                 <div class="box">
-                    <img src="../images/precautions_img/precaution - panda_wash_hand.png - panda_wash_hand.png" alt="">
+                    <img src="../images/precautions_img/precaution - panda_wash_hand.png" alt="">
                     <div class="infomation">
                         <h3>Wash Your Hand</h3>
                         <p>Hands should be washed with soap to eradicate germs.
