I've updated the new image directory for prevent.html

--- a/html/prevent.html
+++ b/html/prevent.html
@@ -48,7 +48,7 @@
         <div class="prevent-content">
             <div class="card2">
                 <div class="box2">
-                    <img src="../images/prevent - wear_a_mask.png" alt="">
+                    <img src="../images/prevent_img/prevent - wear_a_mask.png" alt="">
                     <div class="text">Wear a Mask</div>
                     <p>Wearing a properly-fitting mask, as well as vaccination, self-testing, and physical distancing, can help protect you and others by lowering the risk of COVID-19 spreading. </p>
                 </div>
@@ -56,7 +56,7 @@
 
             <div class="card2">
                 <div class="box2">
-                    <img src="../images/prevent - wash_your_hand.png" alt="">
+                    <img src="../images/prevent_img/prevent - wash_your_hand.png" alt="">
                     <div class="text">Wash your Hand</div>
                     <p>Hands should be washed often with soap and water for at least 20 seconds.
                         This is especially important after blowing your nose, coughing, or sneezing and before eating or preparing food.
@@ -68,7 +68,7 @@
 
             <div class="card2">
                 <div class="box2">
-                    <img src="../images/prevent - consult_doctor.png" alt="">
+                    <img src="../images/prevent_img/prevent - consult_doctor.png" alt="">
                     <div class="text">Consult a Doctor</div>
                     <p>Get it checked out by a doctor even if you only have minor respiratory symptoms. </p>
                 </div>
@@ -76,7 +76,7 @@
 
             <div class="card2">
                 <div class="box2">
-                    <img src="../images/prevent - clean_everyday.png" alt="">
+                    <img src="../images/prevent_img/prevent - clean_everyday.pngs" alt="">
                     <div class="text">Clean Everyday</div>
                     <p>Use disinfectants and cleansers throughout the house.
                         Clean apparent unclean surfaces with soap or detergent-based home cleansers.
