I've updated the new image directory for prevent.html

--- a/html/prevent.html
+++ b/html/prevent.html
@@ -76,7 +76,7 @@
 
             <div class="card2">
                 <div class="box2">
-                    <img src="../images/prevent_img/prevent - clean_everyday.pngs" alt="">
+                    <img src="../images/prevent_img/prevent - clean_everyday.png" alt="">
                     <div class="text">Clean Everyday</div>
                     <p>Use disinfectants and cleansers throughout the house.
                         Clean apparent unclean surfaces with soap or detergent-based home cleansers.
