I've fixed a minor error in the connecting between all Html files.

--- a/html/prevent.html
+++ b/html/prevent.html
@@ -29,7 +29,7 @@
                 <li><a href="../html/index.html" class="menu-btn">Home</a></li>
                 <li><a href="../html/about.html" class="menu-btn">About</a></li>
                 <li><a href="../html/symptoms.html" class="menu-btn">Symptoms</a></li>
-                <li><a href="../html/precautions.html" class="menu-btn">Precautions</a></li>
+                <li><a href="../html/precautious.html" class="menu-btn">Precautions</a></li>
                 <li><a href="../html/prevent.html" class="menu-btn">Prevent</a></li>
                 <li><a href="../html/contact.html" class="menu-btn">Contact</a></li>
                 <li><a href="../html/quiz.html" class="menu-btn">Quiz</a></li>
