Updated the directory for each background image used, set a new background color and image for all the main html, and some updates with the transitions of the contents.

--- a/html/about.html
+++ b/html/about.html
@@ -49,7 +49,7 @@
                     <img src="../images/about_img/about - panda - fight_against_virus.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">What is <span>COVID-19?</span></div>
+                    <div class="text">What is <span>COVID-19</span></div>
                     <p>The COVID-19 pandemic, also known as the coronavirus pandemic, is a global coronavirus disease 2019 (COVID-19) pandemic caused by coronavirus 2 that causes severe acute respiratory syndrome (SARS-CoV-2).
                         In December 2019, the unique virus was discovered in an outbreak in the Chinese city of Wuhan, and attempts to contain it there failed, allowing it to spread throughout the world.
                         On January 30, 2020, the World Health Organization (WHO) proclaimed a Public Health Emergency of International Concern and a Pandemic on March 11, 2020.
@@ -70,6 +70,5 @@
     </footer>
     
     <script src="script.js"></script>
-    <script src="w3-include-html.js"></script>
 </body>
 </html>
