--- a/html/contact.html
+++ b/html/contact.html
@@ -31,7 +31,7 @@
                 <li><a href="../html/index.html" class="menu-btn">Home</a></li>
                 <li><a href="../html/about.html" class="menu-btn">About</a></li>
                 <li><a href="../html/symptoms.html" class="menu-btn">Symptoms</a></li>
-                <li><a href="../html/precautions.html" class="menu-btn">Precautions</a></li>
+                <li><a href="../html/precautious.html" class="menu-btn">Precautions</a></li>
                 <li><a href="../html/prevent.html" class="menu-btn">Prevent</a></li>
                 <li><a href="../html/contact.html" class="menu-btn">Contact</a></li>
                 <li><a href="../html/quiz.html" class="menu-btn">Quiz</a></li>
@@ -46,11 +46,8 @@
      <!-------------------------------- Animation Section -------------------------------->
      <div class = "animation-loading">
       <div style="display:block">
-        <lottie-player 
-        src="https://assets10.lottiefiles.com/packages/lf20_YMim6w.json" 
-        mode="bounce" background="transparent"  speed="0.6"  style="width: 200px; height: 200px;"  
-        loop controls autoplay>
-        </lottie-player>
+        <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_YMim6w.json"  
+        background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
       </div>
     </div>
 
