--- a/html/index.html
+++ b/html/index.html
@@ -45,8 +45,8 @@
      <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Stay Home, Stay Safe</div>
-                <div class="text-2"><span class="type1"></span></div>
+                <div class="text-1">Stay Home, <span>Stay Safe</span></div>
+                <div class="text-2">Protect Yourself <span class="type1"></span></div>
                 <a href="../html/about.html">Learn More</a>
             </div>
         </div>
@@ -58,7 +58,7 @@
     
     <!-------------------------------- Footer Section -------------------------------->
     <footer>
-        <span>Copyright: Team PeaxCH. All Rights Reserved.</span>
+        <span>Copyright <span class="far fa-copyright"></span> Team PeaxCH. All Rights Reserved.</span>
     </footer>
     
     <script src="../js/script.js"></script>
