--- a/html/prevent.html
+++ b/html/prevent.html
@@ -92,7 +92,7 @@
     
     <!-------------------------------- Footer Section -------------------------------->
     <footer>
-        <span>Copyright 2021 Team PeaxCH. All Rights Reserved.</span>
+        <span>Copyright <span class="far fa-copyright"></span> Team PeaxCH. All Rights Reserved.</span>
     </footer>
     
     <script src="../js/script.js"></script>
