--- a/html/precautious.html
+++ b/html/precautious.html
@@ -127,7 +127,7 @@
     
     <!-------------------------------- Footer Section -------------------------------->
     <footer>
-        <span>Copyright: Team PeaxCH. All Rights Reserved.</span>
+        <span>Copyright <span class="far fa-copyright"></span> Team PeaxCH. All Rights Reserved.</span>
     </footer>
     
     <script src="../js/script.js"></script>
