changed the directory for all these html

--- a/html/quiz.html
+++ b/html/quiz.html
@@ -13,7 +13,7 @@
             <h1>Are you Ready?</h1>
             <a href="../html/game.html" class="btn">Play</a>
             <a href="../html/highscores.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-crown"></i></a>
-            <a href="../html/index.html" id="back-btn" class="btn">Back</a>
+            <a href="../index.html" id="back-btn" class="btn">Back</a>
         </div>
     </div>
 </body>
