--- a/html/contact.html
+++ b/html/contact.html
@@ -28,7 +28,7 @@
         <div class="max-width">
             <div class="logo"><a href="#">COVID <span>- 19</span></a></div>
             <ul class= "menu">
-                <li><a href="../html/index.html" class="menu-btn">Home</a></li>
+                <li><a href="../index.html" class="menu-btn">Home</a></li>
                 <li><a href="../html/about.html" class="menu-btn">About</a></li>
                 <li><a href="../html/symptoms.html" class="menu-btn">Symptoms</a></li>
                 <li><a href="../html/precautious.html" class="menu-btn">Precautions</a></li>
@@ -47,7 +47,7 @@
      <div class = "animation-loading">
       <div style="display:block">
         <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_YMim6w.json"  
-        background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+        background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop  autoplay></lottie-player>
       </div>
     </div>
 
