--- a/html/prevent.html
+++ b/html/prevent.html
@@ -26,7 +26,7 @@
         <div class="max-width">
             <div class="logo"><a href="#">COVID <span>- 19</span></a></div>
             <ul class= "menu">
-                <li><a href="../html/index.html" class="menu-btn">Home</a></li>
+                <li><a href="../index.html" class="menu-btn">Home</a></li>
                 <li><a href="../html/about.html" class="menu-btn">About</a></li>
                 <li><a href="../html/symptoms.html" class="menu-btn">Symptoms</a></li>
                 <li><a href="../html/precautious.html" class="menu-btn">Precautions</a></li>
