--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-------------------------------- CSS Stylesheets Reference -------------------------------->
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/style.css">
-
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    
     <!-------------------------------- Tools -------------------------------->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -61,7 +61,7 @@
         <span>Copyright <span class="far fa-copyright"></span> Team PeaxCH. All Rights Reserved.</span>
     </footer>
     
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
