update the directory for all html

--- a/html/about.html
+++ b/html/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-------------------------------- CSS Stylesheets Reference -------------------------------->
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-------------------------------- Tools -------------------------------->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -25,13 +25,13 @@
         <div class="max-width">
             <div class="logo"><a href="#">COVID <span>- 19</span></a></div>
             <ul class= "menu">
-                <li><a href="../index.html" class="menu-btn">Home</a></li>
-                <li><a href="../html/about.html" class="menu-btn">About</a></li>
-                <li><a href="../html/symptoms.html" class="menu-btn">Symptoms</a></li>
-                <li><a href="../html/precautious.html" class="menu-btn">Precautions</a></li>
-                <li><a href="../html/prevent.html" class="menu-btn">Prevent</a></li>
-                <li><a href="../html/contact.html" class="menu-btn">Contact</a></li>
-                <li><a href="../html/quiz.html" class="menu-btn">Quiz</a></li>
+                <li><a href="index.html" class="menu-btn">Home</a></li>
+                <li><a href="html/about.html" class="menu-btn">About</a></li>
+                <li><a href="html/symptoms.html" class="menu-btn">Symptoms</a></li>
+                <li><a href="html/precautious.html" class="menu-btn">Precautions</a></li>
+                <li><a href="html/prevent.html" class="menu-btn">Prevent</a></li>
+                <li><a href="html/contact.html" class="menu-btn">Contact</a></li>
+                <li><a href="html/quiz.html" class="menu-btn">Quiz</a></li>
             </ul>
             <!-------------------------------- Menu Button -------------------------------->
             <div class="menu-btn">
@@ -46,7 +46,7 @@
         <div class="max-width">
             <div class="about-content">
                 <div class="column left">
-                    <img src="../images/about_img/about - panda - fight_against_virus.png" alt="">
+                    <img src="images/about_img/about - panda - fight_against_virus.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">What is <span>COVID-19</span></div>
