--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="max-width">
             <div class="logo"><a href="#">COVID <span>- 19</span></a></div>
             <ul class= "menu">
-                <li><a href="../index.html" class="menu-btn">Home</a></li>
-                <li><a href="../html/about.html" class="menu-btn">About</a></li>
-                <li><a href="../html/symptoms.html" class="menu-btn">Symptoms</a></li>
-                <li><a href="../html/precautious.html" class="menu-btn">Precautions</a></li>
-                <li><a href="../html/prevent.html" class="menu-btn">Prevent</a></li>
-                <li><a href="../html/contact.html" class="menu-btn">Contact</a></li>
-                <li><a href="../html/quiz.html" class="menu-btn">Quiz</a></li>
+                <li><a href="index.html" class="menu-btn">Home</a></li>
+                <li><a href="html/about.html" class="menu-btn">About</a></li>
+                <li><a href="html/symptoms.html" class="menu-btn">Symptoms</a></li>
+                <li><a href="html/precautious.html" class="menu-btn">Precautions</a></li>
+                <li><a href="html/prevent.html" class="menu-btn">Prevent</a></li>
+                <li><a href="html/contact.html" class="menu-btn">Contact</a></li>
+                <li><a href="html/quiz.html" class="menu-btn">Quiz</a></li>
             </ul>
             <!-------------------------------- Menu Button -------------------------------->
             <div class="menu-btn">
@@ -47,7 +47,7 @@
             <div class="home-content">
                 <div class="text-1">Stay Home, <span>Stay Safe</span></div>
                 <div class="text-2">Protect Yourself <span class="type1"></span></div>
-                <a href="../html/about.html">Learn More</a>
+                <a href="html/about.html">Learn More</a>
             </div>
         </div>
     </section>
