--- a/html/contact.html
+++ b/html/contact.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-------------------------------- CSS Stylesheets Reference -------------------------------->
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,13 +28,13 @@
         <div class="max-width">
             <div class="logo"><a href="#">COVID <span>- 19</span></a></div>
             <ul class= "menu">
-                <li><a href="../index.html" class="menu-btn">Home</a></li>
-                <li><a href="../html/about.html" class="menu-btn">About</a></li>
-                <li><a href="../html/symptoms.html" class="menu-btn">Symptoms</a></li>
-                <li><a href="../html/precautious.html" class="menu-btn">Precautions</a></li>
-                <li><a href="../html/prevent.html" class="menu-btn">Prevent</a></li>
-                <li><a href="../html/contact.html" class="menu-btn">Contact</a></li>
-                <li><a href="../html/quiz.html" class="menu-btn">Quiz</a></li>
+              <li><a href="index.html" class="menu-btn">Home</a></li>
+              <li><a href="html/about.html" class="menu-btn">About</a></li>
+              <li><a href="html/symptoms.html" class="menu-btn">Symptoms</a></li>
+              <li><a href="html/precautious.html" class="menu-btn">Precautions</a></li>
+              <li><a href="html/prevent.html" class="menu-btn">Prevent</a></li>
+              <li><a href="html/contact.html" class="menu-btn">Contact</a></li>
+              <li><a href="html/quiz.html" class="menu-btn">Quiz</a></li>
             </ul>
             <!-------------------------------- Menu Button -------------------------------->
             <div class="menu-btn">
@@ -180,7 +180,7 @@
         <span>Copyright <span class="far fa-copyright"></span> Team PeaxCH. All Rights Reserved.</span>
     </footer>
     
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
