--- a/html/end.html
+++ b/html/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/quiz.css">
+    <link rel="stylesheet" href="css/quiz.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
 </head>
 <body>
@@ -16,10 +16,10 @@
                 <input type="text" name="name" id="username" placeholder="Enter your name">
                 <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="../html/game.html" class="btn">Play Again</a>
-            <a href="../html/quiz.html" class="btn">Go Home<i class="fas fa-home"></i></a>
+            <a href="html/game.html" class="btn">Play Again</a>
+            <a href="html/quiz.html" class="btn">Go Home<i class="fas fa-home"></i></a>
         </div>
     </div>
-    <script src="../js/end.js"></script>
+    <script src="js/end.js"></script>
 </body>
 </html>
