--- a/html/game.html
+++ b/html/game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Page</title>
-    <link rel="stylesheet" href="../css/quiz.css">
-    <link rel="stylesheet" href="../css/game.css">
+    <link rel="stylesheet" href="css/quiz.css">
+    <link rel="stylesheet" href="css/game.css">
 </head>
 <body>
     <div class="container">
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-    <script src="../js/game.js"></script>
+    <script src="js/game.js"></script>
     
 </body>
 </html>
