I updated all of these directory since there were some small errors that stopped us from accessing other pages. As a result, this issue has been resolved.

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
             <div class="logo"><a href="#">COVID <span>- 19</span></a></div>
             <ul class= "menu">
                 <li><a href="index.html" class="menu-btn">Home</a></li>
-                <li><a href="html/about.html" class="menu-btn">About</a></li>
-                <li><a href="html/symptoms.html" class="menu-btn">Symptoms</a></li>
-                <li><a href="html/precautious.html" class="menu-btn">Precautions</a></li>
-                <li><a href="html/prevent.html" class="menu-btn">Prevent</a></li>
-                <li><a href="html/contact.html" class="menu-btn">Contact</a></li>
-                <li><a href="html/quiz.html" class="menu-btn">Quiz</a></li>
+                <li><a href="about.html" class="menu-btn">About</a></li>
+                <li><a href="symptoms.html" class="menu-btn">Symptoms</a></li>
+                <li><a href="precautious.html" class="menu-btn">Precautions</a></li>
+                <li><a href="prevent.html" class="menu-btn">Prevent</a></li>
+                <li><a href="contact.html" class="menu-btn">Contact</a></li>
+                <li><a href="quiz.html" class="menu-btn">Quiz</a></li>
             </ul>
+
             <!-------------------------------- Menu Button -------------------------------->
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -47,7 +48,7 @@
             <div class="home-content">
                 <div class="text-1">Stay Home, <span>Stay Safe</span></div>
                 <div class="text-2">Protect Yourself <span class="type1"></span></div>
-                <a href="html/about.html">Learn More</a>
+                <a href="about.html">Learn More</a>
             </div>
         </div>
     </section>
