--- a/highscores.html
+++ b/highscores.html
@@ -13,7 +13,7 @@
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="html/quiz.html" class="btn">Go Home<i class="fas fa-home"></i></a>
+            <a href="quiz.html" class="btn">Go Home<i class="fas fa-home"></i></a>
         </div>
     </div>
     <script src="js/highscores.js"></script>
