--- a/quiz.html
+++ b/quiz.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are you Ready?</h1>
-            <a href="html/game.html" class="btn">Play</a>
-            <a href="html/highscores.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-crown"></i></a>
+            <a href="game.html" class="btn">Play</a>
+            <a href="highscores.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-crown"></i></a>
             <a href="index.html" id="back-btn" class="btn">Back</a>
         </div>
     </div>
