--- a/symptoms.html
+++ b/symptoms.html
@@ -26,12 +26,12 @@
             <div class="logo"><a href="#">COVID <span>- 19</span></a></div>
             <ul class= "menu">
                 <li><a href="index.html" class="menu-btn">Home</a></li>
-                <li><a href="html/about.html" class="menu-btn">About</a></li>
-                <li><a href="html/symptoms.html" class="menu-btn">Symptoms</a></li>
-                <li><a href="html/precautious.html" class="menu-btn">Precautions</a></li>
-                <li><a href="html/prevent.html" class="menu-btn">Prevent</a></li>
-                <li><a href="html/contact.html" class="menu-btn">Contact</a></li>
-                <li><a href="html/quiz.html" class="menu-btn">Quiz</a></li>
+                <li><a href="about.html" class="menu-btn">About</a></li>
+                <li><a href="symptoms.html" class="menu-btn">Symptoms</a></li>
+                <li><a href="precautious.html" class="menu-btn">Precautions</a></li>
+                <li><a href="prevent.html" class="menu-btn">Prevent</a></li>
+                <li><a href="contact.html" class="menu-btn">Contact</a></li>
+                <li><a href="quiz.html" class="menu-btn">Quiz</a></li>
             </ul>
             <!-------------------------------- Menu Button -------------------------------->
             <div class="menu-btn">
