I changed the background with linear-color in some of these html and fixed some content changes due to a mistake we made without realizing it, as well as adding some new things to the content of our html, such as text-shadow.

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
      <div class = "animation-loading">
       <div style="display:block">
         <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_YMim6w.json"  
-        background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop  autoplay></lottie-player>
+        background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
       </div>
     </div>
 
@@ -68,7 +68,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Location</div>
-                                <div class="sub">Singapore</div>
+                                <div class="sub">Singapore Ngee Ann Polytechnic</div>
                             </div>
                         </div>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.739481800391!2d103.77549831385929!3d1.3324443620044755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da108723f5373f%3A0x6e40e274e72cba1d!2sNgee%20Ann%20Poly!5e0!3m2!1sen!2ssg!4v1645096308990!5m2!1sen!2ssg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -121,7 +121,7 @@
       
       
                 <div class="container mt-5">
-                  <h2>All Contacts Information in a Table  <span id="total-contacts"></span></h2>
+                  <h2>All Contacts Information in a Table:  <span id="total-contacts"></span></h2>
                   <table class="table" id="contact-list">
                     <thead>
                       <th>Name</th>
