--- a/precautious.html
+++ b/precautious.html
@@ -109,7 +109,7 @@
     
     
                 <div class="box">
-                    <img src="images/precautions_img/precaution - avoid_crowded-places_area.jpg" alt="">
+                    <img src="images/precautions_img/precaution - avoid_crowded-places_area.png" alt="">
                     <div class="infomation">
                         <h3>Avoid Crowded Area</h3>
                         <p>COVID-19 spreading is limited by physical distancing, 
